# Graphics

./: .gitignore  README.md  gl_basic.c  transformationMatrix.c
CmakeHelloWorld/include/print/: print.h
CmakeHelloWorld/src/print/: print.c
feladat/: CMakeLists.txt
feladat/assets/Cheese_Goat/: cheese goat.mtl
feladat/assets/Hatsune_Miku/: test.kra
feladat/include/Environment/: entity.h  load_texture.h  terrain.h
feladat/include/Utils/: BVH.h  application.h  bounding_box.h  camera.h  menu.h  scene.h
feladat/presentation/: .~lock.AABB_and_collision.odp#  AABB_and_collision.odp
feladat/src/: application.c  bounding_box.c  camera.c  entity.c  load_texture.c  main.c  menu.c  scene.c  terrain.c  utils.c
feladat/textures/Hatsune_Miku/: test.mtl
feladat/textures/Map/: Building.mtl
gyakorlatok/AdvancedSDL/: CMakeLists.txt
gyakorlatok/AdvancedSDL/include/screen/: screen.h
gyakorlatok/AdvancedSDL/src/: main.c
gyakorlatok/BasicSDL/: CmakeLists.txt
gyakorlatok/BasicSDL/src/: main.c
gyakorlatok/Camera_Movement/: CMakeLists.txt
gyakorlatok/Camera_Movement/include/Utils/: camera.h
gyakorlatok/Camera_Movement/include/Window/: app_window.h
gyakorlatok/Camera_Movement/src/: app_window.c  camera.c  main.c  scene.c  utils.c
gyakorlatok/Character_Movement/: CMakeLists.txt
gyakorlatok/Character_Movement/Utils/: application.h  camera.h  utils.h
gyakorlatok/Character_Movement/include/Environment/: entity.h  load_texture.h  player.h  terrain.h
gyakorlatok/Character_Movement/include/Utils/: application.h  bounding_box.h  camera.h  model_texture.h  scene.h  utils.h
gyakorlatok/Character_Movement/src/: application.c  bounding_box.c  camera.c  entity.c  load_texture.c  main.c  model_texture.c  player.c  scene.c  terrain.c  utils.c
gyakorlatok/Character_Movement/textures/Fatass/: fatass.mtl
gyakorlatok/Character_Movement/textures/Hatsune_Miku/: test.blend
gyakorlatok/CmakeHelloWorld/: CMakeLists.txt
gyakorlatok/CmakeHelloWorld/src/: main.c
gyakorlatok/Cuboid/: CMakeLists.txt
gyakorlatok/Cuboid/include/Brick/: Brick.h
gyakorlatok/Cuboid/src/: main.c
gyakorlatok/Cuboid/src/Brick/: brick.c
gyakorlatok/Going3D/: CMakeLists.txt
gyakorlatok/Going3D/include/Utils/: utils.h
gyakorlatok/Going3D/include/Window/: camera.h  main_helper.h  scene.h  window.h
gyakorlatok/Going3D/src/: main.c
gyakorlatok/Going3D/src/Window/: camera.c  cleanup.c  render.c  scene.c  utils.c
gyakorlatok/Line/: CMakeLists.txt
gyakorlatok/Line/include/Color/: color.h
gyakorlatok/Line/include/LineH/: line.h
gyakorlatok/Line/src/: main.c
gyakorlatok/Matrices/: CMakeLists.txt
gyakorlatok/Matrices/include/Matrix/: matrix.h  transformations.h
gyakorlatok/Matrices/src/: main.c
gyakorlatok/Matrices/src/Matrix/: matrix.c  transformations.c
